Image sizes and spacing is correct

--- a/css/index.css
+++ b/css/index.css
@@ -157,8 +157,8 @@ h5 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  padding: 20px 0 20px 0;
+  background-color: #F6F6F6;
 }
 .header-container .header-logo {
   font-size: 3.5rem;
@@ -166,8 +166,9 @@ h5 {
 .header-container .nav-bar {
   display: flex;
   justify-content: space-between;
-  width: 45%;
-  margin-top: 20px;
+  width: 35%;
+  min-width: 285px;
+  margin: 20px auto 0 auto;
 }
 .header-container .nav-bar .nav-link {
   font-size: 1.4rem;
@@ -196,7 +197,7 @@ footer {
 .home .main-content {
   display: flex;
   flex-wrap: wrap;
-  border-bottom: 1px solid #F6F7F8;
+  border-color: #F6F7F8;
 }
 .home .main-content .text-content {
   width: 100%;
@@ -208,25 +209,28 @@ footer {
 }
 .home .main-content .text-content p {
   font-size: 1.4rem;
+  line-height: 2rem;
   color: #5E6164;
   margin-bottom: 20px;
 }
-.home .main-content .img-content {
+.home .main-content .img-group {
   display: flex;
+  justify-content: space-between;
   width: 100%;
   margin-bottom: 20px;
 }
-.home .main-content .img-content .middle-image {
-  width: 20%;
+.home .main-content .img-group .middle-image {
+  width: 31%;
 }
-.home .main-content .img-content img {
+.home .main-content .img-group img {
   border-radius: 10px;
+  width: 100%;
 }
 @media (max-width: 500px) {
-  .home .main-content .img-content .img-sky {
+  .home .main-content .img-group .img-sky {
     display: none;
   }
-  .home .main-content .img-content .img-launch {
+  .home .main-content .img-group .img-launch {
     display: none;
   }
 }
@@ -254,6 +258,7 @@ footer {
 }
 .home .cta .text-content p {
   font-size: 1.4rem;
+  line-height: 2rem;
   color: #5E6164;
   margin-bottom: 20px;
 }
@@ -277,6 +282,7 @@ footer {
 }
 .home .cta .img-space-walk {
   width: 40%;
+  margin-left: 30px;
 }
 @media (max-width: 500px) {
   .home .cta .img-space-walk {
@@ -284,5 +290,6 @@ footer {
   }
 }
 .home .cta .img-space-walk img {
+  width: 100%;
   border-radius: 5px;
 }
