--- a/less/navigation.less
+++ b/less/navigation.less
@@ -3,8 +3,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    padding: 20px 0 20px 0;
+    background-color: @nav-background;
 
     .header-logo {
         font-size: 3.5rem;
@@ -13,9 +13,10 @@
     .nav-bar {
         display: flex;
         justify-content: space-between;
-        width: 45%;
-        margin-top: 20px;
-        
+        width: 35%;
+        min-width: 285px;
+        margin: 20px auto 0 auto;
+
         .nav-link {
             font-size: 1.4rem;
             text-decoration: none;
